--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <p>Build Your Gameplan. Play It Out. Win Together.</p>
   <p><strong>Early Access is LIVE — limited to first 1,000 strategists.</strong></p>
   <a href="https://discord.gg/2JCu7kbrm7" class="btn">👉 JOIN DISCORD</a>
-  <a href="https://forms.gle/YOUR_FORM_HERE" class="btn">📝 JOIN WAITLIST</a>
+  <a href="https://forms.gle/EPamd4jDwggz9koJ9" class="btn">📝 JOIN WAITLIST</a>
   <div class="footer">
     Launching fully in 72 hours. Made for Gamers, Devs & Publishers.
   </div>
